# sana-pipeline

./: .gitignore  1_preprocess_data.ipynb  2_sana_truba_script.py  3_explore_results.ipynb  4_case_2.ipynb  pyproject.toml
data/: case_1_processed.csv  case_2_processed.csv  mirbase22_grch37_coordinates.csv
scripts/: pipeline.py  utils.py
