[tool.poetry]
name = "sana"
version = "0.1.0"
description = ""
authors = ["TasbasMN <nazifts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
pyensembl = "^2.2.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
